add icons and fix app.conf for splunkbase preparation

--- a/modularinputs/python/clickhouse_cloud_audit_logs/default/app.conf
+++ b/modularinputs/python/clickhouse_cloud_audit_logs/default/app.conf
@@ -8,7 +8,12 @@ label = ClickHouse Cloud Audit Logs
 [launcher]
 author=ClickHouse
 description=This modular input retrieves audit logs from the ClickHouse Cloud API and indexes them in Splunk.
-version = 1.0
+version = 1.0.0
 
 [package]
+id = clickhouse_cloud_audit_logs
 check_for_updates = false
+
+[id]
+name = clickhouse_cloud_audit_logs
+version = 1.0.0
